--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,94 +39,121 @@ body {
 
 .wrapper {
   padding: 0 2.4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100vh;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.article-component-wrapper {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .article-component {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   max-width: 73rem;
-  -webkit-box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.5);
-          box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.5);
   border-radius: 1rem;
-  overflow: hidden;
-  background: white;
+  background-color: white;
 }
 
 .article-component__header {
-  margin-bottom: 3.5rem;
-}
-
-.article-component__header img {
-  vertical-align: middle;
-  width: 100%;
-  height: 100%;
-}
-
-.article-component__main, .article-component__footer {
-  padding: 0 3rem;
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
+  min-height: 20rem;
+  border-radius: 1rem 1rem 0 0;
+  background-image: url("../images/drawers.jpg");
+  background-size: cover;
+  background-position: center center;
 }
 
 .article-component__main {
-  margin-bottom: 3rem;
+  -ms-flex-preferred-size: 60%;
+      flex-basis: 60%;
+  padding-top: 4rem;
 }
 
-.article-component__main-title {
+.article-block {
+  margin-bottom: 2rem;
+  padding: 0 3.5rem;
+}
+
+.article-block__title {
   font-weight: 700;
   font-size: 1.6rem;
   color: #48556a;
   margin-bottom: 1.5rem;
 }
 
-.article-component__main-text {
+.article-block__text {
   color: #6d7f97;
-  font-size: 1.35rem;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
-.article-component__footer {
+.author-block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 1.5rem 3.5rem;
   position: relative;
-  padding-bottom: 2rem;
+  overflow: hidden;
+  border-radius: 0 0 1rem 1rem;
 }
 
-.article-component__footer-avatar {
-  overflow: hidden;
+.author-block__avatar {
   margin-right: 1.5rem;
 }
 
-.article-component__footer-avatar img {
-  vertical-align: middle;
+.author-block__avatar img {
   max-width: 4rem;
+  max-height: 4rem;
   border-radius: 50%;
 }
 
-.article-component__footer-info .name {
+.author-block__information-name {
   color: #48556a;
   font-weight: 700;
 }
 
-.article-component__footer-info .date {
+.author-block__information-date {
   color: #6d7f97;
 }
 
-.article-component__footer .share-btn {
+.author-block__btn {
   margin-left: auto;
-}
-
-.article-component__footer .share-btn button {
-  width: 3.5rem;
-  height: 3.5rem;
   border-radius: 50%;
-  border: 0;
-  background-color: #ecf2f8;
-  cursor: pointer;
-  outline: none;
+  overflow: hidden;
+  position: relative;
 }
 
-.article-component__footer-overlay {
+.author-block__overlay {
   background-color: #48556a;
   position: absolute;
   top: 0;
@@ -140,52 +167,107 @@ body {
       -ms-flex-align: center;
           align-items: center;
   padding: 0 3rem;
-  overflow: hidden;
-  max-height: 100%;
-  -webkit-transition: max-height .2s linear;
-  transition: max-height .2s linear;
+  opacity: 0;
+  -webkit-transition: opacity .2s linear;
+  transition: opacity .2s linear;
 }
 
-.article-component__footer-overlay .share-btn button {
-  border: 0;
-  background-color: #6d7f97;
-  cursor: pointer;
-}
-
-.article-component__footer-overlay .share-btn .arrow-icon {
-  fill: white;
-}
-
-.article-component__footer-overlay.overlay-hide {
-  max-height: 0;
-}
-
-.article-component__footer .overlay-title {
+.author-block__overlay-title {
   text-transform: uppercase;
   letter-spacing: .5rem;
   color: #6d7f97;
   margin-right: 2rem;
 }
 
-.article-component__footer .overlay-icons a + a {
+.author-block__overlay-icons a + a {
   margin-left: 1.5rem;
 }
 
-.article-component__footer .overlay-icons svg:hover > path {
-  fill: #6d7f97;
+.author-block__overlay--show {
+  opacity: 1;
 }
 
-@media (min-width: 750px) {
+.author-block__overlay::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  z-index: 10;
+  bottom: -1.4rem;
+  opacity: 0;
+  border-style: solid;
+  border-width: 1.5rem 1.5rem 0 1.5rem;
+  border-color: #48556a transparent transparent transparent;
+}
+
+.share-button {
+  width: 3.5rem;
+  height: 3.5rem;
+  border: 0;
+  background-color: #ecf2f8;
+  cursor: pointer;
+  outline: none;
+}
+
+.share-button--active {
+  background-color: #6d7f97;
+}
+
+.share-button.share-button--active .arrow-icon {
+  fill: #ecf2f8;
+}
+
+@media (min-width: 820px) {
   .article-component {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .article-component__header {
+    border-radius: 1rem 0 0 1rem;
+  }
+  .article-block {
+    margin-bottom: 2rem;
+    padding: 0 3.5rem;
+  }
+  .article-block__title {
+    font-size: 2rem;
+  }
+  .article-block__text {
+    color: #6d7f97;
+    line-height: 1.6;
+  }
+  .author-block {
+    padding: 0 3.5rem 1.5rem;
+    overflow: initial;
+  }
+  .author-block__overlay {
+    background-color: #48556a;
+    -webkit-box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.2);
+    max-width: 25rem;
+    min-height: 5.5rem;
+    border-radius: 1rem;
+    position: absolute;
+    top: -130%;
+    bottom: initial;
+    right: -15%;
+    left: initial;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0 3rem;
+    overflow: initial;
   }
-  .article-component__header {
-    margin-bottom: 0;
-  }
-  .article-component__main {
-    margin-top: 3.5rem;
+  .author-block__overlay::after {
+    opacity: 1;
+    -webkit-filter: drop-shadow(0px 3px 5px rgba(0, 0, 0, 0.5));
+            filter: drop-shadow(0px 3px 5px rgba(0, 0, 0, 0.5));
   }
 }
 /*# sourceMappingURL=style.css.map */
